# PackTool

./: Cargo.toml  Dockerfile  README.md  build.sh  getarch.sh  modpack.toml  modrinth.index.json
.github/workflows/: build.yml
src/: colors.rs  logging.rs  main.rs
src/cli/: parse.rs
src/commands/: build.rs  help.rs  init.rs  mod.rs  refresh.rs
src/modpack/: file.rs  files.rs  mod.rs  pack.rs
