[package]
edition = "2021"
name = "packtool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features = ["derive"]}
data-encoding = "2.3.2"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serde_with = "1.14.0"
sha1 = "0.10.1"
sha2 = "0.10.2"
toml = "0.5.9"
walkdir = "2.3.2"
